<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz_Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">Constantinople is the largest city in Turkey.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="menu_settings">Settings</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct :)</string>
    <string name="wrong_toast">Wrong :(</string>
    <string name="already_done_toast">Already Done :|</string>
    <string name="check_button">Check</string>

    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_tf_1">Electrons are larger than molecules.</string>
    <string name="question_tf_2">The chemical make up food often changes when you cook it.</string>
    <string name="question_tf_3">Atoms are most stable when their outer shells are full.</string>
    <string name="question_tf_4">Atomic bombs work by atomic fission.</string>
    <string name="question_tf_5">Basketball is the only major sport completely American in origin.</string>
    <string name="question_tf_6">Skin is the human body\'s largest organ.</string>
    <string name="question_tf_7">"Magma" is the scientific name for lava.</string>
    <string name="question_tf_8">The classic sci-fi novel Fahrenheit 451 gets its title from the temperature used to burn paper.</string>
    <string name="question_tf_9">In Portugal you can be fined if caught driving whilst wearing flip-flops or not wearing a shirt.</string>
    
    <string name="question_tech_1">TFT is a technology used in what type of component?</string>
        <string name="q_t_1_ans">Monitor</string>
    <string name="question_tech_2">Mountain Lion was a version of which OS?</string>
        <string name="q_t_2_ans">OSX</string>
</resources>
